# multimodal-RAG

./: .env.example  .gitignore  BUG_FIXES_SUMMARY.md  README.md  main.py  pyproject.toml
RAG/: llm.py  pdf_processor.py  rag.py  utils.py  vector_db.py
auth/: db.py
frontend/: frontend.py
schemas/: api_input.py  query.py  response.py  signup.py
