[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "groq>=0.31.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-weaviate>=0.0.5",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "pymongo[srv]>=4.15.1",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.47.1",
    "unstructured[pdf]>=0.18.11",
    "uvicorn>=0.35.0",
    "weaviate-client>=4.16.9",
]
